Update multiple components
